MDL-71003 user: fix alignment of autocomplete participant filters.

--- a/theme/boost/scss/moodle/user.scss
+++ b/theme/boost/scss/moodle/user.scss
@@ -310,3 +310,9 @@
 [data-filterverb="2"] [data-filterverbfor="2"] {
     display: block;
 }
+
+[data-filterregion="value"] {
+    div:first-of-type {
+        @extend .align-top;
+    }
+}
